--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -6,11 +6,10 @@ html {
 body {
   margin: 0;
   /* background-size:contain */
-  background: url('../pages/pic/banner1.jpg') no-repeat;
+  background: url('../pages/pic/banner2.jpg') no-repeat;
   background-position-x: center;
   background-position-y: 10px;
   background-color: rgb(20, 20, 20);
-
 }
 
 .bgc{
@@ -23,11 +22,77 @@ body {
 div{
   text-align: center;
 }
-
+/* 
 h1{
   color: rgb(218, 218, 218);
+} */
+
+h2{
+  padding-top: 50px;
+  font-size: 40px;
+  color: rgba(243, 243, 243, 0.74);
+  height: 30px;
+  animation: HeroAnimation;
+  animation-duration: 2s;
 }
 
 p{
-  color: #cccccc;
+  height: 20px;
+  color: #e7e7e7be;
+  animation: HeroAnimation;
+  animation-duration: 2s;
+}
+
+a{
+  color: rgb(187, 187, 187);
+  text-decoration: none;
+  font-weight: 600;
+}
+
+
+
+@keyframes HeroAnimation {
+  0% {
+      opacity: 0;
+      transform: translateY(20px)
+  }
+  100% {
+      opacity: 1;
+      transform: translateY(0px)
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  html {
+    font-size: 100%;
+  }
+
+  body {
+    margin: 0;
+    /* background-size:contain */
+    background: url('../pages/pic/bannermix.jpg') no-repeat;
+    background-position-x: center;
+    background-position-y: 10px;
+    background-color: rgb(20, 20, 20);
+  }
+
+  h2{
+  padding-top: 50px;
+  font-size: 34px;
+  color: rgba(243, 243, 243, 0.74);
+  height: 30px;
+  animation: HeroAnimation;
+  animation-duration: 2s;
+}
+
+  
+  p{
+    font-size: 20px;
+    height: 20px;
+    color: #e7e7e7be;
+    animation: HeroAnimation;
+    animation-duration: 2s;
+  }
+
+
 }
